# ARCSim-For-SMPL

./: .gitignore  CMakeLists.txt  README.md  README_HYLC.md  README_arcsim  exec.py  replay_folder.py  run_folder.py
conf/: sphere-annotated.json
dependencies/alglib/: CMakeLists.txt
dependencies/freeglut/: CMakeLists.txt
dependencies/jsoncpp/: CMakeLists.txt
dependencies/zlib/: CMakeLists.txt
hylcmaterials/: basket1.json  honey1.json  rib1.json  rib1_noreg.json  satin01.json  satin1.json  stock01.json  stock1.json  stock1_bad.json
mathematica/: cylinderII.nb  cylinderII_2d.nb  macro.nb
meshes/: arm1.txt  arm2.txt  arm3.txt  arm4.txt  arm5.txt  arm6.txt  arm7.txt  arm8.txt  arm9.txt  none.mot  other1.txt  pbns_posedsbs_female.txt  pbns_posedsbs_male.txt  sequence1.txt  sequence2.txt  torso1.txt  torso2.txt  torso3.txt  torso4.txt  torso5.txt  walkseq.txt
models/: male_model.json
motions/: jump.txt
smpl_demo/: jump.json  pbns_sbs_male.json
tests/: .gitignore
tests/1D/conf/: basket_drapeX.json  basket_drapeY.json  basket_stretchX.json  basket_stretchY.json  honey_drapeX.json  honey_drapeY.json  honey_stretchX.json  honey_stretchY.json  rib_drapeX.json  rib_drapeY.json  rib_stretchX.json  rib_stretchY.json  satin_drapeX.json  satin_drapeY.json  satin_stretchX.json  satin_stretchY.json  stock_drapeX.json  stock_drapeY.json  stock_stretchX.json  stock_stretchY.json
tests/2D/conf/: basket_drapeX.json  basket_drapeY.json  basket_stretchX.json  basket_stretchY.json  honey_drapeX.json  honey_drapeY.json  honey_stretchX.json  honey_stretchY.json  rib_drapeX.json  rib_drapeY.json  rib_stretchX.json  rib_stretchY.json  satin_drapeX.json  satin_drapeY.json  satin_stretchX.json  satin_stretchY.json  stock_drapeX.json  stock_drapeY.json  stock_stretchX.json  stock_stretchY.json
tests/fun/conf/: hylc_TMP.json  hylc_scarf.json  hylc_scarf_stiff.json  hylc_thanks.json  hylc_yarnmadillo.json  hylc_yarnny.json
tests/other/conf/: ribbad_drapeY.json  stockbad_drapeX.json
tests/shirt/conf/: shirt_basket.json  shirt_honey.json  shirt_rib.json  shirt_satin.json  shirt_satin_small.json  shirt_stock.json  shirt_stock_small.json
tests/small/conf/: satin01_drapeX.json  stock01_drapeX.json
v0.2.1/: CMakeLists.txt  auglag.cpp  bah.cpp  bah.hpp  bvh.cpp  bvh.hpp  cloth.cpp  cloth.hpp  collision.cpp  collisionutil.cpp  collisionutil.hpp  conf.cpp  constraint.cpp  constraint.hpp  dde.cpp  dde.hpp  display.cpp  display.hpp  displayphysics.cpp  displayplay.cpp  displayplay.hpp  displayreplay.cpp  displayreplay.hpp  displaytesting.cpp  dynamicremesh.cpp  dynamicremesh.hpp  geometry.cpp  handle.cpp  handle.hpp  io.cpp  io.hpp  lbfgs.cpp  localopt.cpp  lsnewton.cpp  magic.hpp  main.cpp  mesh.cpp  mesh.hpp  misc.cpp  morph.cpp  (+42 more)
v0.2.1/hylc/: MathematicaDefinitions.h  hylc.cpp  hylc.hpp  hylc_conf.cpp  hylc_conf.hpp  seamforce.cpp  seamforce.hpp
v0.2.1/hylc/materials/: BaseMaterial.hpp  HermiteSpline1D.hpp  HermiteSpline2D.cpp  HermiteSpline2D.hpp  Poly1D.hpp  Poly2D.hpp  SplineMaterial.cpp  SplineMaterial.hpp
v0.2.1/hylc/strain/: strain.hpp  strainII_valgrad.cpp  strainII_valgradhess.cpp  strainII_value.cpp  strain_valgrad.cpp  strain_valgradhess.cpp  strain_value.cpp
